# phyphox-Satellite

./: .gitignore  CMakeLists.txt  README.md  debugging.conf  flash.bat  prj.conf  satellite.overlay  test.conf
boards/arm/phyphox_satellite/: phyphox_satellite.dts  phyphox_satellite.overlay  phyphox_satellite_defconfig
build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  zephyr_modules.txt  zephyr_settings.txt
build_1/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
build_1/modules/CANopenNode/: cmake_install.cmake
build_1/modules/TraceRecorder/: cmake_install.cmake
build_1/modules/cddl-gen/: cmake_install.cmake
build_1/modules/civetweb/: cmake_install.cmake
build_1/modules/cjson/: cmake_install.cmake
build_1/modules/cmsis/: cmake_install.cmake
build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map  zephyr_pre1.elf  zephyr_pre1.map
build_1/zephyr/kconfig/: sources.txt
src/: adc.c  adc.h  ads1231.c  ads1231.h  bas.c  bas.h  ble.c  ble.h  bmp3.c  bmp3_defs.h  bmpZephyr.c  bmpZephyr.h  debug.c  debug.h  ds18b20.c  ds18b20.h  icm42605.c  icm42605.h  led.c  led.h  mahony.c  mahony.h  main.c  mlx90393.c  mlx90393.h  mlxZephyr.c  mlxZephyr.h  mprls.c  mprls.h  phyphox.h  sensors.h  shtc3.c  shtc3.h  workQueue.c  workQueue.h  workspace.code-workspace
src/waermelehre/: ds18b20.c  ds18b20.h  ds18b20_sensor.c  ds18b20_sensor.h
(+122 files in other folders)
