# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)
list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(DTC_OVERLAY_FILE "satellite.overlay")
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(hello_world)

target_sources(app PRIVATE src/mahony.c)
target_sources(app PRIVATE src/shtc3.c)
target_sources(app PRIVATE src/icm42605.c)
target_sources(app PRIVATE src/workQueue.c)
target_sources(app PRIVATE src/ble.c)
target_sources(app PRIVATE src/mlxZephyr.c)
target_sources(app PRIVATE src/bmp3.c)
target_sources(app PRIVATE src/bmpZephyr.c)
target_sources(app PRIVATE src/mlx90393.c)
target_sources(app PRIVATE src/main.c)
#if(CONFIG_USB_UART_CONSOLE)
#  target_sources(app PRIVATE src/debug.c)
#endif()